--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         
+        /* html {font-size: calc(15px + 0.390625vw);} */
         body {font-size: 18px; margin-top: -100px;}
         .navbar {background-color: darkslategrey;}
         .navbar:last-of-type {background-color:rgb(28, 64, 88);}
